--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -121,12 +121,30 @@
     <value>Add shopping items</value>
     <comment>text for button</comment>
   </data>
+  <data name="Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
   <data name="ContactList" xml:space="preserve">
     <value>Contacts</value>
     <comment>Login for Contact list View</comment>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="EditUserInformation" xml:space="preserve">
+    <value>Edit Information</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last name</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
@@ -141,6 +159,12 @@
   <data name="Password" xml:space="preserve">
     <value>Password</value>
     <comment>label for login view Password label og placeholder for password entry</comment>
+  </data>
+  <data name="Picture" xml:space="preserve">
+    <value>Picture</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
   </data>
   <data name="ShoppingList" xml:space="preserve">
     <value>Shopping List</value>
