--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -127,6 +127,9 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="ContactDetails" xml:space="preserve">
+    <value>Contact Details</value>
+  </data>
   <data name="ContactList" xml:space="preserve">
     <value>Contacts</value>
     <comment>Login for Contact list View</comment>
@@ -135,7 +138,7 @@
     <value>Description</value>
   </data>
   <data name="EditProfile" xml:space="preserve">
-    <value>Edit Profile</value>
+    <value>Edit Profile Information</value>
     <comment>Label for edit profile view</comment>
   </data>
   <data name="EditUserInformation" xml:space="preserve">
@@ -163,6 +166,12 @@
   <data name="Password" xml:space="preserve">
     <value>Password</value>
     <comment>label for login view Password label og placeholder for password entry</comment>
+  </data>
+  <data name="PersonalDetails" xml:space="preserve">
+    <value>Personal Details</value>
+  </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Phone</value>
   </data>
   <data name="Picture" xml:space="preserve">
     <value>Picture</value>
