--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -239,4 +239,7 @@
   <data name="RelativesRole" xml:space="preserve">
     <value>Relatives</value>
   </data>
+  <data name="ItemToAdd" xml:space="preserve">
+    <value>Item</value>
+  </data>
 </root>
