--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddShoppingItems" xml:space="preserve">
-    <value>Add shopping items</value>
+  <data name="AddShoppingItem" xml:space="preserve">
+    <value>Add shopping item</value>
     <comment>text for button</comment>
   </data>
   <data name="AreYouSureThatYouWantToCloseThisApplication" xml:space="preserve">
@@ -241,5 +241,14 @@
   </data>
   <data name="ItemToAdd" xml:space="preserve">
     <value>Item</value>
+  </data>
+  <data name="ErrorOnRemove" xml:space="preserve">
+    <value>Error happened when trying to remove item, please try again later</value>
+  </data>
+  <data name="ErrorOnRemoveAccept" xml:space="preserve">
+    <value>Ok</value>
+  </data>
+  <data name="ErrorOnRemoveTitle" xml:space="preserve">
+    <value>Error</value>
   </data>
 </root>
