--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -150,6 +150,7 @@
   </data>
   <data name="ConnectToCitizenTitle" xml:space="preserve">
     <value>Opret forbindelse til borger</value>
+    <comment>Title for connect to citizen view</comment>
   </data>
   <data name="ContactListTitle" xml:space="preserve">
     <value>Kontakter</value>
@@ -295,5 +296,29 @@
   </data>
   <data name="NursingHomeId" xml:space="preserve">
     <value>Plejepersonale center id</value>
+  </data>
+  <data name="ConnectToNursingHomePlaceholderText" xml:space="preserve">
+    <value>Plejepersonalets center Id </value>
+    <comment>Placeholder text</comment>
+  </data>
+  <data name="ConnectToNursingHomeTitle" xml:space="preserve">
+    <value>Opret forbindelse til et plejehjem</value>
+    <comment>Title for Connect to nursing home View</comment>
+  </data>
+  <data name="LogOut" xml:space="preserve">
+    <value>Log ud</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="NewNote" xml:space="preserve">
+    <value>Nyt notat om borgeren</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="NoteTitle" xml:space="preserve">
+    <value>Notater</value>
+    <comment>Title for Note view</comment>
+  </data>
+  <data name="SettingsTitle" xml:space="preserve">
+    <value>Indstillinger</value>
+    <comment>Title for Settings view</comment>
   </data>
 </root>
