Added checkbox images and made it possible to mark a item as bought

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -321,4 +321,24 @@
     <value>Indstillinger</value>
     <comment>Title for Settings view</comment>
   </data>
+  <data name="ChoosenCitizen" xml:space="preserve">
+    <value>Din valgte borger er:</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="CreateNewAppointment" xml:space="preserve">
+    <value>Opret ny aftale</value>
+    <comment>Title for CreateCalendarAppointment view</comment>
+  </data>
+  <data name="NewAppointment" xml:space="preserve">
+    <value>Opret aftale</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="Note" xml:space="preserve">
+    <value>Notat, Kun delt mellem plejepersonale</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="SearchCitizen" xml:space="preserve">
+    <value>Søg borger</value>
+    <comment>Label for Textfield</comment>
+  </data>
 </root>
