--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -117,15 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddShoppingItem" xml:space="preserve">
-    <value>Tilføj vare</value>
-    <comment>text for button</comment>
-  </data>
   <data name="AreYouSureThatYouWantToCloseThisApplication" xml:space="preserve">
     <value>Er du sikker på at du vil lukke applikationen?</value>
-  </data>
-  <data name="Back" xml:space="preserve">
-    <value>Tilbage</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>Annuller</value>
@@ -271,7 +264,7 @@
   <data name="ErrorOnRemove" xml:space="preserve">
     <value>Der skete en fejl ved sletning af vare, prøv igen senere</value>
   </data>
-  <data name="ErrorOnRemoveAccept" xml:space="preserve">
+  <data name="General_Ok" xml:space="preserve">
     <value>Ok</value>
   </data>
   <data name="ErrorOnRemoveTitle" xml:space="preserve">
@@ -320,5 +313,23 @@
   <data name="SettingsTitle" xml:space="preserve">
     <value>Indstillinger</value>
     <comment>Title for Settings view</comment>
+  </data>
+  <data name="Account_InvalidPasswordText" xml:space="preserve">
+    <value>Password skal være mininum 6 karakterer langt</value>
+  </data>
+  <data name="Account_InvalidPasswordTitle" xml:space="preserve">
+    <value>Ugyldig password</value>
+  </data>
+  <data name="Account_InvalidRoleText" xml:space="preserve">
+    <value>Du skal vælge en rolle</value>
+  </data>
+  <data name="Account_InvalidRoleTitle" xml:space="preserve">
+    <value>Ugyldig rolle</value>
+  </data>
+  <data name="General_InvalidEmailText" xml:space="preserve">
+    <value>Indtast venligst en gyldig email</value>
+  </data>
+  <data name="General_InvalidEmailTitle" xml:space="preserve">
+    <value>Ugyldig email</value>
   </data>
 </root>
