--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -117,15 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddShoppingItem" xml:space="preserve">
-    <value>Add shopping item</value>
-    <comment>text for button</comment>
-  </data>
   <data name="AreYouSureThatYouWantToCloseThisApplication" xml:space="preserve">
     <value>Are you sure, that you would want to close this application</value>
-  </data>
-  <data name="Back" xml:space="preserve">
-    <value>Back</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
@@ -275,7 +268,7 @@
   <data name="ErrorOnRemove" xml:space="preserve">
     <value>Error happened when trying to remove item, please try again later</value>
   </data>
-  <data name="ErrorOnRemoveAccept" xml:space="preserve">
+  <data name="General_Ok" xml:space="preserve">
     <value>Ok</value>
   </data>
   <data name="ErrorOnRemoveTitle" xml:space="preserve">
@@ -325,5 +318,23 @@
   <data name="SettingsTitle" xml:space="preserve">
     <value>Settings</value>
     <comment>Title for settings view</comment>
+  </data>
+  <data name="Account_InvalidPasswordText" xml:space="preserve">
+    <value>Password must be at least 6 characters long.</value>
+  </data>
+  <data name="Account_InvalidPasswordTitle" xml:space="preserve">
+    <value>Invalid password</value>
+  </data>
+  <data name="Account_InvalidRoleText" xml:space="preserve">
+    <value>You must choose a role before proceeding.</value>
+  </data>
+  <data name="Account_InvalidRoleTitle" xml:space="preserve">
+    <value>Invalid role</value>
+  </data>
+  <data name="General_InvalidEmailText" xml:space="preserve">
+    <value>Please enter a valid email</value>
+  </data>
+  <data name="General_InvalidEmailTitle" xml:space="preserve">
+    <value>Invalid email</value>
   </data>
 </root>
