--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -357,4 +357,8 @@
   <data name="General_InvalidEmailTitle" xml:space="preserve">
     <value>Invalid email</value>
   </data>
+  <data name="AddShoppingItem" xml:space="preserve">
+    <value>Add item</value>
+    <comment>Title for add shopping item view</comment>
+  </data>
 </root>
