fixed a couple of crashes and change the view of citizenHomePage

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -356,4 +356,8 @@
     <value>Tilføj vare</value>
     <comment>Title for add shopping item view</comment>
   </data>
+  <data name="Call" xml:space="preserve">
+    <value>Ring</value>
+    <comment>Label for Textfield</comment>
+  </data>
 </root>
