--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -361,4 +361,11 @@
     <value>Add item</value>
     <comment>Title for add shopping item view</comment>
   </data>
+  <data name="CanNotConnectToServer" xml:space="preserve">
+    <value>Det var ikke muligt at forbinde til vores server prøv igen senere</value>
+  </data>
+  <data name="Call" xml:space="preserve">
+    <value>Call</value>
+    <comment>Label for Textfield</comment>
+  </data>
 </root>
