Get latest appointment api method added and resource externalization and display alerts

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -352,10 +352,10 @@
   <data name="General_InvalidEmailTitle" xml:space="preserve">
     <value>Ugyldig email</value>
   </data>
-  <data name="Account_ConnectErrorText" xml:space="preserve">
+  <data name="Connection_ErrorText" xml:space="preserve">
     <value>Der skete en fejl ved forbindelsen, prøv igen senere</value>
   </data>
-  <data name="Account_ConnectErrorTitle" xml:space="preserve">
+  <data name="Connection_ErrorTitle" xml:space="preserve">
     <value>Forbindelsesproblem</value>
   </data>
   <data name="General_NullText" xml:space="preserve">
@@ -367,5 +367,17 @@
   <data name="AddShoppingItem" xml:space="preserve">
     <value>Tilføj vare</value>
     <comment>Title for add shopping item view</comment>
+  </data>
+  <data name="Account_ConnectIdErrorText" xml:space="preserve">
+    <value>Der skete en fejl ved forbindelse, tjek om id er indtastet korrekt (Der er forskel på store og små bogstaver)</value>
+  </data>
+  <data name="Account_ConnectIdErrorTitle" xml:space="preserve">
+    <value>Forbindelses fejl</value>
+  </data>
+  <data name="Account_LoginFailText" xml:space="preserve">
+    <value>Ugyldigt brugernavn eller password</value>
+  </data>
+  <data name="Account_LoginFailTitle" xml:space="preserve">
+    <value>Login fejl</value>
   </data>
 </root>
