Modified calendar view, and added custom masterdetail

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -384,4 +384,28 @@
   <data name="Account_LoginFailTitle" xml:space="preserve">
     <value>Login fejl</value>
   </data>
+  <data name="DayTitle" xml:space="preserve">
+    <value>Dag</value>
+    <comment>Title for Day calendar view</comment>
+  </data>
+  <data name="MonthTitle" xml:space="preserve">
+    <value>Måned</value>
+    <comment>Title for Month calendar view</comment>
+  </data>
+  <data name="SeeMonthsAppointments" xml:space="preserve">
+    <value>Se månedens aftaler</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="SeeTodaysAppointments" xml:space="preserve">
+    <value>Se dagens aftaler</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="SeeWeeksAppointments" xml:space="preserve">
+    <value>Se ugens aftaler</value>
+    <comment>Label for Textfield</comment>
+  </data>
+  <data name="WeekTitle" xml:space="preserve">
+    <value>Ugen</value>
+    <comment>Title for Week Calendar view</comment>
+  </data>
 </root>
