--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -368,4 +368,16 @@
     <value>Tilføj vare</value>
     <comment>Title for add shopping item view</comment>
   </data>
+  <data name="Chat_ChatTitleCaretaker" xml:space="preserve">
+    <value>Plejehjem Chat</value>
+  </data>
+  <data name="Chat_ChatTitleCitizen" xml:space="preserve">
+    <value>Borger Chat</value>
+  </data>
+  <data name="Chat_ChatTitleRelative" xml:space="preserve">
+    <value>Pårørende Chat</value>
+  </data>
+  <data name="General_Back" xml:space="preserve">
+    <value>Tilbage</value>
+  </data>
 </root>
