--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.resx
@@ -373,4 +373,16 @@
     <value>Add item</value>
     <comment>Title for add shopping item view</comment>
   </data>
+  <data name="Chat_ChatTitleCaretaker" xml:space="preserve">
+    <value>Caretaker Chat</value>
+  </data>
+  <data name="Chat_ChatTitleCitizen" xml:space="preserve">
+    <value>Citizen Chat</value>
+  </data>
+  <data name="Chat_ChatTitleRelative" xml:space="preserve">
+    <value>Relative Chat</value>
+  </data>
+  <data name="General_Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
 </root>
