--- a/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Resx/AppResources.da.resx
@@ -373,7 +373,7 @@
     <comment>Label for Textfield</comment>
   </data>
   <data name="Account_ConnectIdErrorText" xml:space="preserve">
-    <value>Der skete en fejl ved forbindelse, tjek om id er indtastet korrekt (Der er forskel på store og små bogstaver)</value>
+    <value>Der skete en fejl ved forbindelse, tjek om id er indtastet korrekt</value>
   </data>
   <data name="Account_ConnectIdErrorTitle" xml:space="preserve">
     <value>Forbindelses fejl</value>
@@ -432,5 +432,92 @@
   </data>
   <data name="Message" xml:space="preserve">
     <value>Besked</value>
+  </data>
+  <data name="AppointmentEndTime" xml:space="preserve">
+    <value>Aftale slutstidspunkt:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="AppointmentStartTime" xml:space="preserve">
+    <value>Aftale startstidspunkt:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="CalendarLanguage" xml:space="preserve">
+    <value>da-DK</value>
+    <comment>SettingTheCalendarLanguage</comment>
+  </data>
+  <data name="CreateAccount" xml:space="preserve">
+    <value>Opret konto</value>
+    <comment>Label</comment>
+  </data>
+  <data name="CreateAccountAs" xml:space="preserve">
+    <value>Opret konto som:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="DescriptionOfAppointment" xml:space="preserve">
+    <value>Beskrivelse af begivenheden:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="InsertCarecenterIdText" xml:space="preserve">
+    <value>Insert plejecenterets id, du kan finde idet i et udleveret dokument fra plejecenteret</value>
+    <comment>Label</comment>
+  </data>
+  <data name="InsertDementiaIdText" xml:space="preserve">
+    <value>Indtast dement id, se Idet i den dementes account information</value>
+    <comment>Label</comment>
+  </data>
+  <data name="NextAppointment" xml:space="preserve">
+    <value>Næste aftale:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>Rolle</value>
+    <comment>Label</comment>
+  </data>
+  <data name="SearchContacts" xml:space="preserve">
+    <value>Søg i kontakter</value>
+    <comment>Label</comment>
+  </data>
+  <data name="SearchRelative" xml:space="preserve">
+    <value>Søg pårørende</value>
+    <comment>Label</comment>
+  </data>
+  <data name="SeeListOfTodaysAppointments" xml:space="preserve">
+    <value>Se dagens aftaler</value>
+    <comment>Label</comment>
+  </data>
+  <data name="ShoppingListItemDescription" xml:space="preserve">
+    <value>Vare:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="ShoppingListItemQuantity" xml:space="preserve">
+    <value>Mængde:</value>
+    <comment>Label</comment>
+  </data>
+  <data name="Blue" xml:space="preserve">
+    <value>Blå</value>
+  </data>
+  <data name="CalendarAddCaregiverFailureSubjekt" xml:space="preserve">
+    <value>For at tilføje nye kalender aftaler, skal du have valgt en borger i vælg borger siden</value>
+  </data>
+  <data name="CalendarAddRelativeFailureSubjekt" xml:space="preserve">
+    <value>Du skal være forbundet til en borger, før du har mulighed for at oprette nye kalender aftaler til borgerens Kalender</value>
+  </data>
+  <data name="CaregiverAddFailureTitle" xml:space="preserve">
+    <value>Ingen borger valgt</value>
+  </data>
+  <data name="Green" xml:space="preserve">
+    <value>Grøn</value>
+  </data>
+  <data name="Red" xml:space="preserve">
+    <value>Rød</value>
+  </data>
+  <data name="RelativeAddFailureTitle" xml:space="preserve">
+    <value>Ingen borger forbundet</value>
+  </data>
+  <data name="ShoppingListAddCaregiverFailureSubjekt" xml:space="preserve">
+    <value>Du skal have valgt en borger i vælg borger viewet.</value>
+  </data>
+  <data name="ShoppingListAddRelativeFailureSubjekt" xml:space="preserve">
+    <value>Du skal være forbundet til en borger, før du har mulighed for at tilføje varer til hans/huns indkøbsliste</value>
   </data>
 </root>
